--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Build Project
-        run: npm run build # Adjust based on your project's build step
+        run: npm install
+             npm run build
         
       - name: Deploy to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
